キャラクター詳細と動きを追加

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ダンジョンゲーム</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
 </head>
 <body>
-    <script src="main.js"></script>
+    <h1>ダンジョンゲーム</h1>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
