--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ダンジョンゲーム</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <style>
+        body {
+            background-color: black;
+            text-align: center;
+        }
+        canvas {
+            border: 2px solid white;
+        }
+    </style>
 </head>
 <body>
-    <h1>ダンジョンゲーム</h1>
-    <script type="module" src="./main.js"></script>
+    <h1 style="color: white;">ダンジョンゲーム</h1>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
