--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
             background-color: black;
             text-align: center;
             margin: 0;
-            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
+
+        #container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            color: white;
+            margin-bottom: 10px;
+        }
+
         #game-container {
             width: 800px;
             height: 600px;
-            margin: auto;
+            border: 3px solid white;
             position: relative;
-            border: 2px solid white;
-        }
-        #game-container canvas {
-            position: absolute;
-        }
-        /* 🔹 HTML の背景画像を CSS で設定 */
-        #game-container::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('assets/field.png') no-repeat center;
-            background-size: cover;
-            z-index: -1;
         }
     </style>
 </head>
 <body>
-    <h1 style="color: white;">ダンジョンゲーム</h1>
-    <div id="game-container"></div>  <!-- ゲームのキャンバスをここに追加 -->
-
-    <script src="main.js"></script>
+    <div id="container">
+        <h1>ダンジョンゲーム</h1>
+        <div id="game-container"></div>
+    </div>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
